formatting contact form & styling the feedback page

--- a/base/css/feedback.css
+++ b/base/css/feedback.css
@@ -1,6 +1,6 @@
 #feedback{
     text-align: center;
     font-size: 30px;
-    padding: 20px;
-    color: slategrey;
+    padding: 200px;
+    color: orangered;
 }
