--- a/base/css/contact-screen-display.css
+++ b/base/css/contact-screen-display.css
@@ -5,15 +5,16 @@ body, html{
     text-align: center;
 }
 ul{
-    list-style-type: none;
-    margin:0;
-    padding: 0;
-    text-align: center;
+    display:table;
+    margin: 0 auto;
 }
 ul li{
     padding: 3px 6px;
 }
 
+#choice{
+
+}
 
 .section{
     float:left;
@@ -34,6 +35,7 @@ form{
     text-align: left;
 }
 input[type=text], input[type=email], input[type=tel]{
+    display:block;
     -webkit-appearance:none;
     width:250px;
     border:1px solid #808080;
